# STM32F7-Network_Clock

./: .gitignore  CMakeLists.txt  README.md
NTP/: .cproject  .mxproject  NTP Debug.launch  NTP.ioc
NTP/Core/Inc/: NTP.h  Time.h  clock.h  debug.h  ds3231_for_stm32_hal.h  main.h
NTP/Core/Src/: RTC.c  Time.c  app_main.c  clock.c  ds3231_for_stm32_hal.c  main.c  stm32f7xx_hal_msp.c
project/: .project
project/Core/Inc/: RTC.h  ds3231_for_stm32_hal.h  stm32f7xx_hal_conf.h  stm32f7xx_it.h
project/Core/Src/: NTP.c  Time.c  app_main.c  debug.c  stm32f7xx_hal_timebase_tim.c  stm32f7xx_it.c
project/Debug/: NTP.elf  NTP.list  NTP.map  makefile  objects.list  sources.mk
project/Debug/Core/Src/: NTP.cyclo  NTP.d  NTP.su  RTC.cyclo  RTC.d  RTC.su  Time.cyclo  Time.d  Time.su  app_main.cyclo  app_main.d  app_main.su  clock.cyclo  clock.d  clock.su  debug.cyclo  debug.d  debug.su  ds3231_for_stm32_hal.cyclo  ds3231_for_stm32_hal.d  ds3231_for_stm32_hal.su  freertos.d  main.cyclo  main.d  main.su  stm32f7xx_hal_msp.cyclo  stm32f7xx_hal_msp.d  stm32f7xx_hal_msp.su  stm32f7xx_hal_timebase_tim.cyclo  stm32f7xx_hal_timebase_tim.d  stm32f7xx_it.cyclo  stm32f7xx_it.d  stm32f7xx_it.su  subdir.mk  syscalls.d  sysmem.d  system_stm32f7xx.d
project/Debug/Drivers/BSP/STM32746G-Discovery/: stm32746g_discovery.d  stm32746g_discovery_lcd.cyclo  stm32746g_discovery_lcd.d  stm32746g_discovery_sdram.d  (+1 more)
project/Debug/LWIP/App/: lwip.cyclo  lwip.d  subdir.mk
project/Drivers/BSP/STM32746G-Discovery/: stm32746g_discovery_lcd.h
tests/: CMakeLists.txt  testTime.cpp  time.cpp  time.hpp
(+29 files in other folders)
